src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_csq@17-41197837-G-A.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: A
  consequences:
    - intron_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
    - mane_select
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197837G>A
  hgvs_c: c.5468-18C>T
  hgvs_p: p.?
  cdna_pos:
    ord: 5581
    total: 7088
  cds_pos:
    ord: 5468
    total: 5592
  protein_pos: ~
  distance: 18
  strand: -1
  messages: ~
