src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_csq@17-41199653-T-G.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: G
  consequences:
    - splice_region_variant
    - intron_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
    - mane_select
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41199653T>G
  hgvs_c: c.5467+7A>C
  hgvs_p: p.?
  cdna_pos:
    ord: 5580
    total: 7088
  cds_pos:
    ord: 5467
    total: 5592
  protein_pos: ~
  distance: -7
  strand: -1
  messages: ~
