src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_csq@17-41199654-G-T.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
snapshot_kind: text
---
- allele:
    Alt:
      alternative: T
  consequences:
    - splice_region_variant
    - splice_donor_region_variant
    - coding_transcript_intron_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
    - mane_select
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41199654G>T
  hgvs_c: c.5467+6C>A
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: -6
  strand: -1
  messages: ~
