src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_csq@17-41199658-T-G.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: G
  consequences:
    - splice_donor_variant
    - coding_transcript_intron_variant
  putative_impact: high
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - mane_select
    - ref_seq_select
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41199658T>G
  hgvs_c: c.5467+2A>C
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: -2
  strand: -1
  messages: ~
