src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_csq@17-41199659-G-T.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: T
  consequences:
    - splice_donor_variant
    - intron_variant
  putative_impact: HIGH
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    SoTerm:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - Coding
    - ManeSelect
  rank:
    ord: 22
    total: 22
  hgvs_t: c.5467+1C>A
  hgvs_p: p.?
  tx_pos:
    ord: 5580
    total: 7088
  cds_pos:
    ord: 5467
    total: 5592
  protein_pos: ~
  distance: -1
  strand: -1
  messages: ~
